fix session id null bug

--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -160,6 +160,6 @@ body{
         flex-direction: column;
     }
 }
-.modal-body * {
-    margin: 8px;
-}
+// .modal-body * {
+//     margin: 8px;
+// }
