--- a/BGpt/templates/BGpt/index.html
+++ b/BGpt/templates/BGpt/index.html
@@ -109,6 +109,13 @@
           <button id="btn-stop" class="btn btn-prim" style="display: none;"><i class="fa-solid fa-microphone-slash"></i> Stop Recording</button>
           <button id="btn-replay" class="btn btn-prim" style="display: none;"><i class="fa-solid fa-repeat"></i> Replay Audio</button>
           <br>
+          <!-- spinnner -->
+          <div class="d-flex justify-content-center">
+            <div class="spinner-border" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+          </div>
+
           <div id="resp-cont">
             <div id="response"></div>
             <div id="resp-trans"></div>
