--- a/BGpt/templates/BGpt/layout.html
+++ b/BGpt/templates/BGpt/layout.html
@@ -42,6 +42,8 @@
       </div>
 </body>
 <footer>
+  <div>Created for CS50W's Capstone Assignment.</div>
+  <div>Follow me on: <a href="https://github.com/dermotbg" target="_blank">Github</a></div>
     {% block page_scripts %}{% endblock %}
 </footer>
 </html>
