--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -150,4 +150,8 @@ footer {
   align-items: center;
 }
 
+.navbar-light {
+  box-shadow: 0 0 0 5px #2b0000;
+}
+
 /*# sourceMappingURL=styles.css.map */
