--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -126,7 +126,7 @@ body{
         box-shadow: 
                 0 0 0 10px $red,
                 0 0 0 20px $green,
-                0 0 0 30px $white;
+                // 0 0 0 30px $white;
     }
     #start-cont{
         display: flex;
@@ -183,7 +183,7 @@ footer{
 
 .navbar-light{
     box-shadow: 
-        0 0 0 5px $black,
+        0 0 0 5px $green-drk;
         // 0 0 0 20px $green,
         // 0 0 0 30px $white;
 }
