non hover login buttons

--- a/BGpt/templates/BGpt/login_register.html
+++ b/BGpt/templates/BGpt/login_register.html
@@ -22,7 +22,7 @@
         <div class="form-group">
             <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
         </div>
-        <button type="submit" class="btn">Submit</button>
+        <button type="submit" class="btn btn-prim">Submit</button>
     </form>
 </div>
 
@@ -36,7 +36,7 @@
         <div class="form-group">
             <input class="form-control" type="password" name="password" placeholder="Password">
         </div>
-        <button type="submit" class="btn">Submit</button>
+        <button type="submit" class="btn btn-prim">Submit</button>
     </form>
 </div>
 <div class="message">
