--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -6,11 +6,14 @@ body .btn-prim {
   border-style: solid;
   border: #2b0000;
 }
-body .btn-prim .login .register {
-  border: 1px, solid, #2b0000;
-}
 body .btn-prim:hover {
   box-shadow: 0 0 0 4px #ff2d2d, 0 0 0 8px #319835;
+}
+body .btn-prim:not(.btn):hover {
+  color: black;
+  box-shadow: none;
+  border: 0;
+  border-radius: 0.5em;
 }
 body .btn-sec {
   background-color: #ffffff;
@@ -28,10 +31,12 @@ body #register-cont {
   display: none;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 body #login-cont {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   padding: 5px 5px 5px 5px;
 }
