--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -20,18 +20,17 @@ body{
         border-width: 1px;
         border-style: solid;
         border: $black;
-
-        .login .register{
-            border: 1px, solid, $black;
-        }
     }
     .btn-prim:hover{
-        // background-color: $red;
-        // color: $white;
         box-shadow: 
             0 0 0 4px $red,
             0 0 0 8px $green,
-            // 0 0 0 30px $white;
+    }
+    .btn-prim:not(.btn):hover{
+        color: black;
+        box-shadow: none;
+        border: 0;
+        border-radius: .5em;
     }
 
     .btn-sec{
@@ -50,10 +49,12 @@ body{
         display: none;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
     }
     #login-cont{
         display: flex;
         flex-direction: column;
+        justify-content: center;
         align-items: center;
         padding: 5px 5px 5px 5px;
     }
