--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -66,6 +66,13 @@ body{
         flex-direction: row;
         justify-content: center;
         // align-items: center;
+        a{
+            text-decoration: none;
+        }
+    }
+    .btn-reg {
+        justify-content: space-between;
+        padding: 5% 5% 5% 5% ;
     }
     .message{
         display: flex;
