--- a/BGpt/templates/BGpt/login_register.html
+++ b/BGpt/templates/BGpt/login_register.html
@@ -2,6 +2,13 @@
 {% load static %}
 
 {% block body %}
+<div id="bgpt-logo-cont">
+    <h1>B</h1>
+    <h1>G</h1>
+    <h3>p</h3>
+    <h3>t</h3>
+</div>
+
 <div class="btn-cont">
     <button type="button" class="btn-prim" id="login">Login</button>
     <button type="button" class="btn-prim" id="register">Register</button>
