--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -133,8 +133,7 @@ body{
         border-radius: .5em;
         box-shadow: 
                 0 0 0 10px $red,
-                0 0 0 20px $green,
-                // 0 0 0 30px $white;
+                0 0 0 20px $green;
     }
     #start-cont{
         display: flex;
@@ -155,6 +154,8 @@ body{
         align-items: end;
         border: solid 2px;
         border-bottom: 0;
+        border-radius: .5em;
+        padding: 10px 10px 10px 10px;
         a{
             display: inline-block;
         }
