--- a/BGpt/templates/BGpt/history.html
+++ b/BGpt/templates/BGpt/history.html
@@ -2,27 +2,23 @@
 {% load static %}
 
 {% block body %} 
+
 <div class="row">
     <div class="col-4">
-        {% for h in history %}
       <div class="list-group" id="list-tab" role="tablist">
-        <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">{{ h.title }}</a>
+        {% for h in history %}
+        <a class="list-group-item list-group-item-action chat-instance" id="ch-{{ h.session }}" data-bs-toggle="list" href="#list-{{ h.session }}" role="tab" aria-controls="list-{{ h.session }}">{{ h.title }}</a>
+
+        {% endfor %}
       </div>
     </div>
-        {% endfor %}
 
-
-
-    <!-- <div class="col-8">
+    <div class="col-8">
       <div class="tab-content" id="nav-tabContent">
-        <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+        <div class="tab-pane fade show active" id="list-{{ h.session }}" role="tabpanel" aria-labelledby="list-{{ h.session }}-list">
             <div class="inpt">{{ h.input }}</div>
             <div class="resp">{{ h.response }}</div>
         </div>
-
-        <!-- <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>
-        <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...</div>
-        <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div> -->
       </div>
     </div>
   </div>
