--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -176,6 +176,18 @@ body{
             margin-bottom: 50px;
         }
     }
+    .hist-list{
+    --bs-list-group-bg: var(--bs-body-bg);
+    --bs-list-group-border-color: var(--bs-border-color);
+    --bs-list-group-border-width: var(--bs-border-width);
+    --bs-list-group-item-padding-x: 1rem;
+    --bs-list-group-item-padding-y: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    // padding-left: 0;
+    // margin-bottom: 0;
+    // background-color: $green;
+    }
     
 }
 .card-body{
