--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -149,14 +149,23 @@ body #chat-cont:last-child {
     margin-bottom: 50px;
   }
 }
-body .hist-list {
-  --bs-list-group-bg: var(--bs-body-bg);
-  --bs-list-group-border-color: var(--bs-border-color);
-  --bs-list-group-border-width: var(--bs-border-width);
-  --bs-list-group-item-padding-x: 1rem;
-  --bs-list-group-item-padding-y: 0.5rem;
-  display: flex;
-  flex-direction: column;
+body .title-list {
+  list-style: none;
+}
+body .list-group-item {
+  border-radius: 0;
+}
+body .list-group-item:hover {
+  background-color: #319835;
+  color: #ffffff;
+}
+body .inp {
+  list-style: none;
+  border: 5px solid #ff2d2d;
+}
+body .resp {
+  list-style: none;
+  border: 5px solid #ff2d2d;
 }
 
 .card-body {
