--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -181,6 +181,7 @@ body{
     }
     .list-group-responses > *{
         display: none;
+        border: solid 2px $red;
     }
     .list-group-item:hover{
         background-color: $green;
