--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -150,6 +150,10 @@ body #chat-cont:last-child {
   }
 }
 body .title-list {
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   list-style: none;
 }
 body .list-group-responses > * {
@@ -191,6 +195,11 @@ body .resp {
 }
 .modal-content .modal-body .spinner-border {
   display: none;
+}
+.modal-content .paginatot .pagination {
+  --bs-pagination-padding-x: 0.62rem;
+  --bs-pagination-padding-y: 0.375rem;
+  --bs-pagination-font-size: 1rem;
 }
 
 footer {
