--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -177,8 +177,19 @@ body{
         }
     }
     .title-list{
+        max-width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
         list-style: none;
     }
+    // .list-group-item{
+    //     // display: inline;
+    //     max-width: 100%;
+    //     overflow: hidden;
+    //     text-overflow: ellipsis;
+    //     white-space: nowrap;
+    // }
     .list-group-responses > *{
         display: none;
         border: solid 2px $red;
@@ -218,6 +229,12 @@ body{
         .spinner-border {
             display: none;
         }
+    }
+    .paginatot
+    .pagination{
+        --bs-pagination-padding-x: 0.62rem;
+        --bs-pagination-padding-y: 0.375rem;
+        --bs-pagination-font-size: 1rem;
     }
 }
 footer{
