--- a/BGpt/templates/BGpt/history.html
+++ b/BGpt/templates/BGpt/history.html
@@ -3,7 +3,7 @@
 
 {% block body %} 
 <div class="row">
-    <div class="col-4">
+    <div class="col-4 text-truncate">
         <ul class="list-group">
             {% for h in history %}
             {% ifchanged %}
@@ -13,28 +13,20 @@
             {% endifchanged %}
             {% endfor %}
         </ul>
+
+         <!-- paginator -->
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                {% if history.has_previous %}
+                
+                <li class="page-item"><a href="?page={{ history.previous_page_number }}" class="page-link">previous</a></li>
+                {% endif %}
+                {% if history.has_next %}
+                <li class="page-item"><a href="?page={{ history.next_page_number }}" class="page-link">next</a></li>
+                {% endif %}
+            </ul>
+        </nav>
     </div>
-
-    <!-- paginator -->
-    <nav aria-label="Page navigation">
-        <ul class="pagination">
-            {% if history.has_previous %}
-            <li class="page-item"><a href="?page=1" class="page-link">&laquo; first</a></li>
-            <li class="page-item"><a href="?page={{ history.previous_page_number }}" class="page-link">previous</a></li>
-            {% endif %}
-
-            <!-- <span class="page-item">
-                {% for p in history.paginator.page_range  %}
-                <li class="page-item"><a href="?page={{ p }}" class="page-link">{{ p }}</a></li>
-                {% endfor %}
-            </span> -->
-
-            {% if history.has_next %}
-            <li class="page-item"><a href="?page={{ history.next_page_number }}" class="page-link">next</a></li>
-            <li class="page-item"><a href="?page={{ history.paginator.num_pages }}" class="page-link">last &raquo;</a></li>
-            {% endif %}
-        </ul>
-    </nav>
 
     <div class="col-8">
         <ul class="list-group list-group-responses">
