--- a/BGpt/templates/BGpt/history.html
+++ b/BGpt/templates/BGpt/history.html
@@ -19,10 +19,14 @@
             <ul class="pagination">
                 {% if history.has_previous %}
                 
-                <li class="page-item"><a href="?page={{ history.previous_page_number }}" class="page-link">previous</a></li>
+                <li class="page-item"><a href="?page={{ history.previous_page_number }}" class="page-link">&laquo;</a></li>
+                {% else %}
+                <li class="page-item disabled"><a href="?page={{ history.next_page_number }}" class="page-link">&laquo;</a></li>
                 {% endif %}
                 {% if history.has_next %}
-                <li class="page-item"><a href="?page={{ history.next_page_number }}" class="page-link">next</a></li>
+                <li class="page-item"><a href="?page={{ history.next_page_number }}" class="page-link">&raquo;</a></li>
+                {% else %}
+                <li class="page-item disabled"><a href="?page={{ history.previous_page_number }}" class="page-link">&raquo;</a></li>
                 {% endif %}
             </ul>
         </nav>
