chat bubbles add for history

--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -170,7 +170,7 @@ body .title-list {
 }
 body .list-group-responses > * {
   display: none;
-  border: solid 2px #ff2d2d;
+  padding: 5px 5px 5px 5px;
 }
 body .list-group-item:hover {
   background-color: #319835;
@@ -218,6 +218,32 @@ footer {
 
 .navbar-light {
   box-shadow: 0 0 0 5px #0f4d32;
+}
+
+.bubble {
+  --r: 10px; /* the radius */
+  --t: 30px; /* the size of the tail */
+  max-width: 80%;
+  padding: calc(2 * var(--r) / 3);
+  margin: calc(2 * var(--r) / 4);
+  -webkit-mask: radial-gradient(var(--t) at var(--_d) 0, rgba(0, 0, 0, 0) 98%, #000 102%) var(--_d) 100%/calc(100% - var(--r)) var(--t) no-repeat, conic-gradient(at var(--r) var(--r), #000 75%, rgba(0, 0, 0, 0) 0) calc(var(--r) / -2) calc(var(--r) / -2) padding-box, radial-gradient(50% 50%, #000 98%, rgba(0, 0, 0, 0) 101%) 0 0/var(--r) var(--r) space padding-box;
+  background: #319835;
+  color: #ffffff;
+}
+
+.left {
+  --_d: 0%;
+  border-left: var(--t) solid rgba(0, 0, 0, 0);
+  margin-right: var(--t);
+  place-self: start;
+}
+
+.right {
+  --_d: 100%;
+  border-right: var(--t) solid rgba(0, 0, 0, 0);
+  margin-left: var(--t);
+  place-self: end;
+  box-shadow: 0 0 0 10px #ff2d2d, 0 0 0 20px #319835;
 }
 
 /*# sourceMappingURL=styles.css.map */
