--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -198,7 +198,7 @@ body{
     }
     .list-group-responses > *{
         display: none;
-        border: solid 2px $red;
+        padding: 5px 5px 5px 5px;
     }
     .list-group-item:hover{
         background-color: $green;
@@ -249,3 +249,38 @@ footer{
         // 0 0 0 20px $green,
         // 0 0 0 30px $white;
 }
+
+
+.bubble {
+    --r: 10px; /* the radius */
+    --t: 30px; /* the size of the tail */
+    
+    max-width: 80%;
+    padding: calc(2*var(--r)/3);
+    margin: calc(2*var(--r)/4);
+    -webkit-mask: 
+      radial-gradient(var(--t) at var(--_d) 0,#0000 98%,#000 102%) 
+        var(--_d) 100%/calc(100% - var(--r)) var(--t) no-repeat,
+      conic-gradient(at var(--r) var(--r),#000 75%,#0000 0) 
+        calc(var(--r)/-2) calc(var(--r)/-2) padding-box, 
+      radial-gradient(50% 50%,#000 98%,#0000 101%) 
+        0 0/var(--r) var(--r) space padding-box;
+    // background: linear-gradient(135deg, $red, $green) border-box;
+    background: $green;
+    color: $white;
+  }
+  .left {
+    --_d: 0%;
+    border-left: var(--t) solid #0000;
+    margin-right: var(--t);
+    place-self: start;
+  }
+  .right {
+    --_d: 100%;
+    border-right: var(--t) solid #0000;
+    margin-left: var(--t);
+    place-self: end;
+    box-shadow: 
+                0 0 0 10px $red,
+                0 0 0 20px $green;
+  }
