--- a/BGpt/templates/BGpt/layout.html
+++ b/BGpt/templates/BGpt/layout.html
@@ -25,6 +25,7 @@
               <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
               {% if user.is_authenticated %}
               <a class="nav-link" href="#">{{ user.username }}</a>
+              <a class="nav-link" href="{% url 'history' user.id %}">History</a>
               <a class="nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
               <a class="nav-link" href="{% url 'login' %}">Login</a>
