--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -88,6 +88,19 @@ body #bgpt-logo-cont h1 {
 body #bgpt-logo-cont h3 {
   font-size: 3em;
 }
+@media (max-width: 600px) {
+  body #bgpt-logo-cont {
+    background-size: 40%;
+  }
+  body #bgpt-logo-cont h1 {
+    font-size: 5em;
+    margin-bottom: 0;
+  }
+  body #bgpt-logo-cont h3 {
+    font-size: 2em;
+    margin-bottom: 0;
+  }
+}
 body #welcome {
   display: flex;
   flex-direction: column;
