--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -170,6 +170,9 @@ body .pagination .page-link {
     flex-direction: column;
     align-items: center;
   }
+  body #card-cont > div:last-child {
+    margin-bottom: 0;
+  }
   body .card {
     margin-bottom: 50px;
   }
@@ -236,6 +239,26 @@ footer {
 
 .navbar-light {
   box-shadow: 0 0 0 5px #0f4d32;
+}
+
+#edit-cont {
+  display: none;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-right: 5%;
+}
+
+#save {
+  display: none;
+}
+
+#cancel {
+  display: none;
+}
+
+#info {
+  display: none;
+  color: #ff2d2d;
 }
 
 .bubble {
