--- a/BGpt/templates/BGpt/history.html
+++ b/BGpt/templates/BGpt/history.html
@@ -41,6 +41,12 @@
     </div>
 
     <div class="col-8">
+        <div id="edit-cont">
+            <button class="btn-prim" id="edit"> Edit</button>
+            <div id="info">* click on an input to edit</div>
+            <button class="btn-prim" id="save"> Save</button>
+            <button class="btn-prim" id="cancel"> Cancel</button>
+        </div>
         <ul class="list-group list-group-responses">
             {% for sessions in history %}
                 {% for h in sessions %}
